<resources>
    <string name="app_name">The Movie App</string>
    <string name="favorite">Favorite</string>
    <string name="movie_app">Movie App</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="poster">Poster</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="overview">Overview</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">favorite</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="search_movie">Search Movie</string>
    <string name="share">Share</string>
    <string name="watchlist">Watchlist</string>
    <string name="title_watchlist">Watchlist</string>

</resources>