<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/homeFragment">


    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.themovieapp.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_detailActivity"
            app:destination="@id/detailActivity"
            app:popUpToInclusive="false" />
    </fragment>

    <activity
        android:id="@+id/detailActivity"
        android:name="com.example.themovieapp.detail.DetailActivity"
        android:label="@string/detail_movie"
        tools:layout="@layout/activity_detail" />
    <activity
        android:id="@+id/searchActivity"
        android:name="com.example.themovieapp.search.SearchActivity"
        app:moduleName="themovieapp.search"
        android:label="@string/search_movie"
        tools:layout="@layout/activity_search" />

    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.themovieapp.favorite.FavoriteFragment"
        app:moduleName="themovieapp.favorite"
        android:label="@string/favorite" >
        <action
            android:id="@+id/action_favoriteFragment_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>
</navigation>